--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,2 @@
-APP_ENV=local
-APP_DEBUG=true
-APP_KEY=
-APP_TIMEZONE=UTC
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
-
-CACHE_DRIVER=memcached
-QUEUE_DRIVER=sync
+ITEM_UNDER_DISCUSSION_FILE_PATH="PATH OF TEXT FILE CONTAINING CURRENT ITEM BEING DISCUSSED"
+MEETING_AGENDA_FILE_PATH="PATH OF TEXT FILE CONTAINING LIST OF MEETINGS ON THE AGENDA"
