Switch persistence from filesystem to S3

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 ITEM_UNDER_DISCUSSION_FILE_PATH="PATH OF TEXT FILE CONTAINING CURRENT ITEM BEING DISCUSSED"
 MEETING_AGENDA_FILE_PATH="PATH OF TEXT FILE CONTAINING LIST OF MEETINGS ON THE AGENDA"
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
+AWS_REGION=
+S3_BUCKET=
